src/test/run-pass/main-int.rs
fn main() -> int { 0 }