src/test/compile-fail/while-type-error.rs
// error-pattern: mismatched types

fn main() { while main { } }

